fixed padding for alignment

--- a/sass/navigation/_secondary_nav.scss
+++ b/sass/navigation/_secondary_nav.scss
@@ -14,13 +14,13 @@
     line-height: 30px;
 
     margin: 0 0 .75em;
-    padding: 0em .55em .3em .65em;
+    padding: 0em .55em .2em .65em;
 
     text-decoration: none;
 
     img {
       display: inline-block;
-      margin-top: 3px;
+      margin-top: 4px;
       margin-right: 9px;
     }
   }
